# Projeto_Final_Backend

Projeto_Backend/: Readme.md  pyproject.toml
Projeto_Backend/myproject/: Makefile  db.sqlite3  pyproject.toml
Projeto_Backend/myproject/static/css/: style.css
Projeto_Backend/myproject/templates/: about.html
